--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'kotlin-android-extensions'
 }
 
+androidExtensions {
+    experimental = true
+}
+
 android {
     compileSdk 30
 
