--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation'io.coil-kt:coil-compose:1.3.1'
+    implementation "com.google.accompanist:accompanist-glide:0.10.0"
 }
